examples/test/testpolicy19070.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19070
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key22: value49
      key0: value43
      key49: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value33
          key19: value3
          key8: value27
      podSelector:
        matchLabels:
          key45: value1
          key6: value2
